--- a/templates/summary.html
+++ b/templates/summary.html
@@ -19,14 +19,25 @@
                 </p>
             </div>
         </div>
-        <form action="/analyze" method="post">
-            <textarea name="rawtext" class="form-control" , rows="3" placeholder="Enter your raw text">
-            </textarea>
-            <button class="btn btn-primary submitBtn" type="submit">Submit</button>
-        </form>
     </div>
 
+    <div class="container" style="display: flex; justify-content:space-around">
+        <p class="original_title col-sm-4">Original-text</p>
+        <p class="summary_title col-sm-4">Summary</p>
+    </div>
 
+    <div class="container srt">
+        <p class="originalTxt col-sm-6">{{original_txt}}</p>
+        <div class="container col-sm-6">
+            <p class="summaryTxt">{{summary}}</p>
+            <button class="btn btn-success" type="submit" style="margin-left: 10px;">WORDS: {{len_summary}}</button>
+        </div>
+    </div>
+
+    <div class="container">
+        <button class="btn btn-danger" type="submit">WORDS: {{len_org_txt}}</button>
+
+    </div>
 
 
 
