--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,8 @@
+body {
+    background-color: #0f0e0ed1;
+    font-family: 'Arial', sans-serif;
+}
+
 .jumbotron {
     background-color: aquamarine;
 }
